# FreerArrow

./: CHANGELOG.md  FreerArrow.cabal  README.md  package.yaml  stack.yaml
.github/workflows/: FreerArrow.yml
coq/: Classes.v  Common.v  CounterT.v  CounterTB.v  FreerArrow.v  FreerArrow2.v  FreerArrowChoiceL.v  FreerArrowCounter.v  FreerArrowCounterT.v  FreerArrowCounterTB.v  FreerArrowL.v  FreerChoiceArrow.v  FreerChoiceArrowCounterTB.v  Tactics.v  _CoqProject  coq-freer-arrows.opam  flake.nix
examples/Examples/: Compare.hs  State.hs  StateM.hs
examples/apply/: Main.hs
examples/exception/: Main.hs
examples/imp/Imp/: AST.hs
examples/imp/Imp/Arrow/: FreeIfImp.hs  FreeImp.hs  FreeImpWithK.hs  FreeWeakImp.hs
examples/imp/Imp/Monad/: FreeWeakImp.hs
examples/state/: Main.hs
examples/state/Examples/: Countdown.hs  MapState.hs  ReadWrite.hs  State.hs  StateM.hs
examples/webclient/: Main.hs
src/Control/Arrow/: Arrow.hs
src/Control/Arrow/Exception/: ArrowException.hs
src/Control/Arrow/Freer/: Bridge.hs  Elgot.hs  ElgotFinal.hs  FreerArrow.hs  FreerArrowApply.hs  FreerArrowB.hs  FreerArrowBridge.hs  FreerArrowChoice.hs  FreerArrowChoiceL.hs  FreerArrowFinal.hs  FreerArrowL.hs  FreerArrowOps.hs  FreerArrowRouter.hs  FreerArrowSimple.hs  FreerChoiceArrow.hs  FreerChoiceArrowB.hs  FreerChoiceArrowRouter.hs  FreerPreArrow.hs  FreerProfunctor.hs  FreerStrongProfunctor.hs  FreerWeakArrow.hs  Internal.hs  KleisliFreer.hs  Router.hs  RouterChoice.hs  Sum2.hs  Translation.hs
src/Control/Arrow/Routed/: Classes.hs  ClassesChoice.hs
src/Control/Monad/Freer/: Sum1.hs  (+2 more)
(+9 files in other folders)
