opam-version: "2.0"
maintainer: "liyao@pdx.edu"
version: "dev"

homepage: "https://github.com/lastland/FreerArrow"
dev-repo: "git+https://github.com/lastland/FreerArrow.git"
bug-reports: "https://github.com/lastland/FreerArrow/issues"
license: "BSD-3"

synopsis: "The Coq formalization of freer arrows"
description: "Theory for freer arrows."

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" {>= "8.17"}
  "coq-hammer" {>= "1.3.2"}
]

tags: []

authors: [
  "Yao Li"
]
